ver 0.24 (not yet released)
* protocol
  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
  - filter "prio" (for "playlistfind"/"playlistsearch")
* archive
  - add option to disable archive plugins in mpd.conf
* decoder
  - hybrid_dsd: remove
  - opus: implement bitrate calculation
  - wavpack: require libwavpack version 5
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
* tags
  - new tag "Mood"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* remove Haiku support

ver 0.23.9 (not yet released)
* output
  - pipewire: set app icon

ver 0.23.8 (2022/07/09)
* storage
  - curl: fix crash if web server does not understand WebDAV
* input
  - cdio_paranoia: fix crash if no drive was found
  - cdio_paranoia: faster cancellation
  - cdio_paranoia: don't scan for replay gain tags
  - pipewire: fix playback of very short tracks
  - pipewire: drop all buffers before manual song change
  - pipewire: fix stuttering after manual song change
  - snapcast: fix busy loop while paused
  - snapcast: fix stuttering after resuming playback
* mixer
  - better error messages
  - alsa: fix setting volume before playback starts
  - pipewire: fix crash bug
  - pipewire: fix volume change events with PipeWire 0.3.53
  - pipewire: don't force initial volume=100%
* support libfmt 9

ver 0.23.7 (2022/05/09)
* database
  - upnp: support pupnp 1.14
* decoder
  - ffmpeg: fix HLS seeking
  - opus: fix missing song length on high-latency files
* output
  - shout: require at least libshout 2.4.0
* mixer
  - pipewire: fix volume restore
  - software: update volume of disabled outputs
* support libiconv

ver 0.23.6 (2022/03/14)
* protocol
  - support filename "cover.webp" for "albumart" command
  - support "readcomments" and "readpicture" on CUE tracks
* decoder
  - ffmpeg: fix end-of-file check (update stuck at empty files)
  - opus: fix "readpicture" on Opus files
* output