@@ -46,7 +46,6 @@
 #include "CrossFade.hxx"
 #include "pcm/MixRampGlue.hxx"
 #include "tag/Tag.hxx"
-#include "Idle.hxx"
 #include "util/Compiler.h"
 #include "util/Domain.hxx"
 #include "thread/Name.hxx"
@@ -582,8 +581,7 @@ Player::OpenOutput() noexcept
 	paused = false;
 
 	pc.state = PlayerState::PLAY;
-
-	idle_add(IDLE_PLAYER);
+	pc.listener.OnPlayerStateChanged();
 
 	return true;
 }
@@ -617,7 +615,7 @@ Player::CheckDecoderStartup(std::unique_lock<Mutex> &lock) noexcept
 			(buffer_before_play_size + sizeof(MusicChunk::data) - 1)
 			/ sizeof(MusicChunk::data);
 
-		idle_add(IDLE_PLAYER);
+		pc.listener.OnPlayerStateChanged();
 
 		if (pending_seek > SongTime::zero()) {
 			assert(pc.seeking);
@@ -707,7 +705,7 @@ Player::SeekDecoder(std::unique_lock<Mutex> &lock) noexcept
 		pc.outputs.Cancel();
 	}
 
-	idle_add(IDLE_PLAYER);
+	pc.listener.OnPlayerStateChanged();
 
 	if (!dc.IsSeekableCurrentSong(*pc.next_song)) {
 		/* the decoder is already decoding the "next" song -
@@ -1108,7 +1106,7 @@ Player::SongBorder() noexcept
 		pc.outputs.Drain();
 
 		pc.outputs.Pause();
-		idle_add(IDLE_PLAYER);
+		pc.listener.OnPlayerStateChanged();
 	}
 }
 
